versao final etapa 1 colocada